# syslog_forwarder

./: Cargo.toml  README.md  docker-compose.yml
src/: connection.rs  incoming.rs  main.rs  outgoing.rs
